--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>3.3.4</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-webflux -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <version>6.1.13</version>
+        </dependency>
 
     </dependencies>
 
